--- a/changelog.txt
+++ b/changelog.txt
@@ -10,4 +10,4 @@ v1.0.5
 - [BREAKING] Renderer init function now hidden. All initialisation happens via the constructor.
 - [BREAKING] Renrerer functions renderSceneObject and renderImage have been renamed to two overloaded functions, called "render".
 - [BREAKING] The Text class has been removed and its functionality has been moved to another overloaded function in the Renderer, called "render".
-- [BREAKING] Renderer functions generateTexture, getTextureHandle and deleteTexture are now private.
+- [BREAKING] SceneObjects passed to the new Renderer.render function are no longer enclosed in a shared_ptr but are plain SceneObjects, passed by reference.
